<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Statistiko</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ueberschrift_auswahl_mannschaft">WÄHLE DEINE MANNSCHAFT</string>
    <string name="neueMannschaft">Neue Mannschaft</string>
    <string name="ueberschrift_einstellungen">Einstellungen</string>
    <string name="mannschaft">Mannschaft</string>
    <string name="kader">Kader</string>
    <string name="kategorien">Kategorien</string>
    <string name="ueberschrift_einzel_stati">Einzelspielstatistik</string>
    <string name="ueberschrift_erfasse_neue_stati">Neue Statistik</string>
    <string name="heim">HEIM</string>
    <string name="auswaerts">AUSWÄRTS</string>
    <string name="gegnerbezeichnung">Gegnerbezeichnung</string>
    <string name="teilnehmer">Teilnehmer</string>
    <string name="statistikAnlegen">Statistik anlegen</string>
    <string name="ueberschrift_erfassungsart">Aufnahmemodus</string>
    <string name="laufenderBetrieb">LAUFENDER BETRIEB</string>
    <string name="nachtraeglich">NACHTRÄGLICH</string>
    <string name="ueberschrift_first_start">Sportkategorie</string>
    <string name="handball">Handball</string>
    <string name="fussball">Fußball</string>
    <string name="basketball">Basketball</string>
    <string name="eigene">Eigene</string>
    <string name="mannschaftsstatistik">Mannschaftsstatistik</string>
    <string name="anzahlSpiele">Anzahl Spiele:</string>
    <string name="gewonnen">Gewonnen:</string>
    <string name="verloren">Verloren:</string>
    <string name="unentschieden">Unentschieden:</string>
    <string name="tore">Tore:</string>
    <string name="gegnertore">Gegentore:</string>
    <string name="durschnittToreSpiel">Durchschnitt Tore/Spiel:</string>
    <string name="durschnittGegentoreSpiel">Durchschnitt Gegentore/Spiel:</string>
    <string name="spielerstatistik">Spielerstatistik</string>
    <string name="vereinsname">Vereinsname</string>
    <string name="mannschaftsname">Mannschaftsname</string>
    <string name="ueberschrift_kader">Kaderauswahl</string>
    <string name="spielerErstellen">Spieler erstellen</string>
    <string name="fertig">Fertig</string>
    <string name="ueberschrift_kategorie">Kategorienauswahl</string>
    <string name="kategorieErzeugen">Kategorie erzeugen</string>
    <string name="ueberschrift_mannschaft">MANNSCHAFT</string>
    <string name="vereinslogo">Vereinslogo</string>
    <string name="kategoriename">KATEGORIENAME:</string>
    <string name="kategorisierung">KATEGORISIERUNG:</string>
    <string name="art">ART:</string>
    <string name="ueberschrift_new_spieler">Spieler</string>
    <string name="vorname">Vorname:</string>
    <string name="nachname">Nachname:</string>
    <string name="position">Position:</string>
    <string name="groesse">Größe:</string>
    <string name="trikonummer">Trikonr.:</string>
    <string name="waehlen">Wählen</string>
    <string name="foto">FOTO</string>
    <string name="ueberschrift_spielerbild">Spielerbild verwalten</string>
    <string name="fotoAuswaehlen">Foto auswählen</string>
    <string name="platzhalterInteger">0</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="platzhalterTime">00:00:00</string>
    <string name="heimmannschaft">Heimmannschaft</string>
    <string name="doppelpunkt">:</string>
    <string name="gastmannschaft">Gastmannschaft</string>
    <string name="spieler">Spieler:</string>
    <string name="kategorie">Kategorie:</string>
    <string name="keineEintraege">Es konnte kein Eintrag gefunden werden</string>
    <string name="platzhalterDatum">99.99.99</string>
    <string name="platzhalterString">Text</string>
    <string name="vs">vs.</string>
    <string name="gesamtstatistik">Gesamtstatistik</string>
    <string name="einzelstatistiken">Einzelstatistiken</string>
    <string name="neueStatistik">Neue Statistik</string>
    <string name="defaultTrikonummer">1</string>
    <string name="defaultGroesse">170 cm</string>


    <color name="selected">#00FF00</color>
    <color name="transparent">@android:color/transparent</color>
    <color name="button_general_color">#ff0000</color>


    <string name="title_activity_first_start">FirstStart</string>
    <string name="title_activity_kategorie">Kategorienauswahl</string>
    <string name="title_activity_new_kategorie">NewKategorieActivity</string>
    <string name="title_activity_kader">KaderActivity</string>
    <string name="title_activity_new_spieler">NewSpielerActivity</string>
    <string name="title_activity_hauptmenu">HauptmenuActivity</string>
    <string name="title_activity_mannschaft">MannschaftActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_auswahl_mannschaft">AuswahlMannschaftActivity</string>
    <string name="title_activity_erfasse_neue_stati">ErfasseNeueStatiActivity</string>
    <string name="title_activity_erfassungsart">ErfassungsartActivity</string>
    <string name="title_activity_erfassungs">ErfassungsActivity</string>
    <string name="title_activity_spielerbild">SpielerbildActivity</string>
    <string name="title_activity_einzel_stati">EinzelStatiActivity</string>
    <string name="title_activity_ergebnistabelle">ErgebnistabelleActivity</string>
    <string name="title_activity_gesamt_stati">GesamtStatiActivity</string>

</resources>
