<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heim"
                android:text="@string/platzhalterString"
                style="@style/text"/>

            <TextView
                android:id="@+id/datum"
                android:text="@string/platzhalterDatum"
                android:gravity="right"
                style="@style/smalltext"/>


        </LinearLayout>

        <TextView
            android:text="@string/vs"
            style="@style/text"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ergebnis"
                android:text="@string/platzhalterInteger"
                style="@style/text"/>

            <TextView
                android:id="@+id/gast"
                android:layout_width="fill_parent"
                android:text="@string/platzhalterString"
                android:gravity="right"
                style="@style/text"/>


        </LinearLayout>

        </LinearLayout>

</RelativeLayout>