<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

            <TextView
                android:text="@string/mannschaftsstatistik"
                android:paddingTop="45dp"
                style="@style/ueberschrift"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/anzahlSpiele"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/anzahlspiele"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/gewonnen"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/gewonnen"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/verloren"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/verloren"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/unentschieden"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/unentschieden"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/tore"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/tore"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/gegnertore"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/gegentore"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/durschnittToreSpiel"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/schnittTore"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/durschnittGegentoreSpiel"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/schnittGegentore"
                        android:text="123"
                        android:layout_weight="1"
                        />
                </TableRow>

                </TableLayout>

    </LinearLayout>
