<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_marginLeft"
    android:paddingRight="@dimen/activity_horizontal_marginRight"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="de.szut.statistikapp.activities.FirststartActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/ueberschrift"
            android:text="@string/ueberschrift_first_start"
            style="@style/seitenueberschrift" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >

        <Button
            android:id="@+id/handball"
            android:text="@string/handball"
            android:onClick="sport_click"
            android:drawableStart="@drawable/ic_handball"
            android:drawableLeft="@drawable/ic_handball"
            android:background="@drawable/red_button"
            style="@style/bigButtonStyle" />

        <Button
            android:id="@+id/fussball"
            android:text="@string/fussball"
            android:onClick="sport_click"
            android:drawableStart="@drawable/ic_fussball"
            android:drawableLeft="@drawable/ic_fussball"
            android:background="@drawable/green_button"
            style="@style/bigButtonStyle"/>

        <Button
            android:id="@+id/basketball"
            android:text="@string/basketball"
            android:onClick="sport_click"
            android:drawableStart="@drawable/ic_basketball"
            android:drawableLeft="@drawable/ic_basketball"
            android:background="@drawable/blue_button"
            style="@style/bigButtonStyle"/>

        <Button
            android:id="@+id/eigene"
            android:text="@string/eigene"
            android:onClick="sport_click"
            android:background="@drawable/yellow_button"
            style="@style/bigButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
