<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_marginLeft"
    android:paddingRight="@dimen/activity_horizontal_marginRight"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="de.szut.statistikapp.activities.NewSpielerActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/überschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ueberschrift_new_spieler"
            style="@style/seitenueberschrift" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/foto"
            android:onClick="spielerFoto_click"
            android:background="@drawable/default_button"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            style="@style/defaultButtonStyle"/>

        <Button
            android:id="@+id/addbutton"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/spielerErstellen"
            android:onClick="spielerAdd_click"
            android:background="@drawable/default_button"
            android:textSize="18sp"
            style="@style/defaultButtonStyle"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

       <LinearLayout
           android:layout_height="fill_parent"
           android:layout_width="0dp"
           android:layout_weight="0.2">

           <SeekBar
               android:id="@+id/spielerGroesseSeekBar"
               android:layout_width="350dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginLeft="-160dp"
               android:rotation="270"
               android:max="100"/>

       </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.0">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/vorname"
                style="@style/unterueberschrift"/>

            <EditText
                android:id="@+id/spielerVorname"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:inputType="text|textCapWords"/>


            <TextView
                android:layout_height="wrap_content"
                android:text="@string/nachname"
                style="@style/unterueberschrift"/>

            <EditText
                android:id="@+id/spielerNachname"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:inputType="text|textCapWords"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    style="@style/unterueberschrift"/>

                <Button
                    android:id="@+id/wählen_click"
                    android:text="@string/waehlen"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.78"
                    android:onClick="positionWählen_click"
                    android:layout_width="0dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1.5"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/groesse"
                        android:gravity="start|bottom"
                        style="@style/unterueberschrift"/>

                    <TextView
                        android:id="@+id/spielerGroesse"
                        android:text="@string/defaultGroesse"
                        style="@style/unterueberschrift"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_height="0dp"
                        android:layout_weight="@string/defaultTrikonummer"
                        android:text="@string/trikonummer"
                        android:gravity="end|bottom"
                        style="@style/unterueberschrift"/>

                    <TextView
                        android:id="@+id/spielerTrikonummer"
                        android:text="@string/platzhalterInteger"
                        android:gravity="end|top"
                        style="@style/unterueberschrift"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2">

                <SeekBar
                    android:id="@+id/spielerTrikonummerSeekBar"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-152dp"
                    android:rotation="270"
                    android:max="98"/>

            </LinearLayout>

        </LinearLayout>

</RelativeLayout>
