<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/spielerinfos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_unbekannt"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/vorname"
                android:textStyle="bold"
                style="@style/smalltext"/>

            <TextView
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nachname"
                android:textStyle="bold"
                style="@style/smalltext"/>

            <TextView
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/trikonummer"
                android:textStyle="bold"
                style="@style/smalltext"/>

            <TextView
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/groesse"
                android:textStyle="bold"
                style="@style/smalltext"/>

            <TextView
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/position"
                android:textStyle="bold"
                style="@style/smalltext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/vorname"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/platzhalterString"
                style="@style/smalltext"/>

            <TextView
                android:id="@+id/nachname"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/platzhalterString"
                style="@style/smalltext"/>

            <TextView
                android:id="@+id/trikonummer"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/platzhalterString"
                style="@style/smalltext"/>

            <TextView
                android:id="@+id/groesse"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/platzhalterString"
                style="@style/smalltext"/>

            <TextView
                android:id="@+id/position"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/platzhalterString"
                style="@style/smalltext"/>



            </LinearLayout>

    </LinearLayout>

    <AdapterViewFlipper
        android:id="@+id/kategorienViewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

</LinearLayout>