<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_marginLeft"
    android:paddingRight="@dimen/activity_horizontal_marginRight"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="de.szut.statistikapp.activities.NewKategorieActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/mannschaftÜberschrift"
            android:text="@string/ueberschrift_mannschaft"
            style="@style/seitenueberschrift" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/addbutton"
            android:text="@string/fertig"
            android:onClick="fertig_Click"
            android:background="@drawable/default_button"
            style="@style/defaultButtonStyle"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingBottom="20dp">

        <TextView
            android:text="@string/vereinsname"
            style="@style/unterueberschrift"/>

        <EditText
            android:id="@+id/vereinsname"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:singleLine="true"
            android:inputType="text|textCapWords"
            android:layout_width="match_parent"/>

        <TextView
            android:text="@string/mannschaftsname"
            style="@style/unterueberschrift"/>

        <EditText
            android:id="@+id/mannschaftsname"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:singleLine="true"
            android:inputType="text|textCapWords"
            android:layout_width="match_parent"/>


        <TextView
            android:text="@string/vereinslogo"
            style="@style/unterueberschrift"/>


        <ImageView
            android:id="@+id/vereinslogo"
            android:src="@drawable/defaultvereinslogo"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>

    </LinearLayout>

</RelativeLayout>
