<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_marginLeft"
    android:paddingRight="@dimen/activity_horizontal_marginRight"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="de.szut.statistikapp.activities.HauptmenuActivity" >


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vereinsname"
            android:text="@string/vereinsname"
            android:ellipsize="end"
            android:singleLine="true"
            style="@style/seitenueberschrift" />

        <TextView
            android:id="@+id/mannschaftsname"
            android:layout_width="wrap_content"
            android:text="@string/mannschaftsname"
            style="@style/ueberschrift" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center">

            <Button
                android:id="@+id/hauptmenuConfig"
                android:background= "@drawable/ic_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="config_click" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <Button
            android:id="@+id/gesamtstatistik"
            android:text="@string/gesamtstatistik"
            android:background="@drawable/red_button"
            android:onClick="gesamtstatistik_click"
            style="@style/bigButtonStyle"/>

        <Button
            android:id="@+id/einzelstatistiken"
            android:text="@string/einzelstatistiken"
            android:background="@drawable/green_button"
            android:onClick="einzelstatistik_click"
            style="@style/bigButtonStyle"/>

        <Button
            android:id="@+id/neuestatistik"
            android:text="@string/neueStatistik"
            android:background="@drawable/blue_button"
            android:onClick="neuestatistik_click"
            style="@style/bigButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
