<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_marginLeft"
    android:paddingRight="@dimen/activity_horizontal_marginRight"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="de.szut.statistikapp.activities.NewKategorieActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/mannschaftÜberschrift"
            android:text="@string/ueberschrift_einstellungen"
            style="@style/seitenueberschrift" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="6dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <Button
            android:id="@+id/einstellungenMannschaft"
            android:text="@string/mannschaft"
            android:onClick="mannschaft_click"
            android:background="@drawable/red_button"
            style="@style/bigButtonStyle"/>

        <Button
            android:id="@+id/einstellungenKader"
            android:text="@string/kader"
            android:onClick="kader_click"
            android:background="@drawable/green_button"
            style="@style/bigButtonStyle"/>

        <Button
            android:id="@+id/einstellungenKategorien"
            android:text="@string/kategorien"
            android:onClick="kategorien_click"
            android:background="@drawable/blue_button"
            style="@style/bigButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
